# Plain PEP 621 packaging (setuptools backend — deliberately NOT Poetry/UV, to avoid a
# toolchain dependency on a small, disposable CLI). `requirements.lock.txt` stays the
# byte-reproducible known-good pin; this file is the standard install front-door.
#
# Why this exists: `requires-python = ">=3.11"` makes `pip install .` REFUSE on Python
# 3.9/3.10 instead of silently downgrading python-roborock to an ancient 0.x with no B01
# modules — the project's #1 false-alarm trap (see DESIGN_NOTES "Dependency fragility").
# The `vac` console script also installs onto the correct interpreter, retiring the
# hardcoded-shebang fragility for installed users (`./vac.py` still works as before).
#
# Version 0.1.1 (see CHANGELOG.md).

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "roborock-q10-cli"
version = "0.1.1"
description = "Unofficial CLI + reverse-engineered protocol reference for the Roborock Q10 (B01) cloud protocol"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["roborock", "q10", "b01", "vacuum", "mqtt", "reverse-engineering"]
dependencies = [
    "python-roborock>=5.14,<6",  # B01/Q10 device API + MQTT (public PyPI; NOT a fork). <6 blocks the next major.
    "lz4",                        # decompress the protocol-301 room grid
    "Pillow",                     # render the room map PNG (decode_map.py)
]

[project.urls]
Homepage = "https://github.com/andrewlyeats/roborock-q10-cli"

# `./vac.py` still works via its shebang; these give pip-installed users PATH commands
# wired to the right interpreter.
[project.scripts]
vac = "vac:main"
roborock-decode-map = "decode_map:main"

[tool.setuptools]
# Top-level modules, not a package directory.
py-modules = ["vac", "decode_map", "check_roborock_api"]
